# cfb-forensic

./: .gitignore  .gitleaks.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: fuzz.yml
docs/: index.md  privacy.md  terms.md
examples/: gen_cfb.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: audit.rs
privacy/: index.html
search/: search_index.json
src/: lib.rs  raw.rs
terms/: index.html
tests/: audit.rs
tests/data/: clean.cfb  deleted_stream.cfb  orphaned_entry.cfb
